app/css/login.css
#login form{
	margin-top: 1%; 
	text-align: center;
}

#login label{
	font-weight: bold;
}

#login #agora_logo{
	display: block;
    margin: auto;
    margin-top: 8%;
}

#login #loginMessage{
	text-align: center;
	width: 180px;
	margin: 5px auto;
	padding: 5px auto;
}

#login #uninett_logo{
	display: block;
    margin: auto;
    margin-top: 5%;
}

#feideLoginDiv{
	text-align: center;
}

#feideDomainPciker{
	width: 30%;
}

#feideDomainDiv{
	font-weight: bold;
}

